Added linked to GitHub "Open source by Petra"

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
         </section>
 
         <footer>
-
+            <p>
+            <a href="https://github.com/petradn/weatherapp-off-petra" target="blank"> Open source </a> by Petra
+            </p>
         </footer>
 </div>
 <script src="src/index.js"> </script>
