Put the section "weather-location" in the block with the search query

--- a/index.html
+++ b/index.html
@@ -31,25 +31,21 @@
                         </div>
                         <input type="submit" value="Search" class="search-button">
                     </form>
+                    <section class="weather-location">
+                    <h3>
+                        <i class="fas fa-map-marker-alt"> </i><span id="current-city"> <strong>CITY</strong></span>:
+                        <span id="current-time"> </span>
+                        <br />
+                        <span id="current-degree"> TEMP </span> <a id="celcius" href="#">ºC </a>| <a id="fahrenheit" href="#">ºF</a>
+                    </h3>
+                    </section>
                 </div>
                 <div class="col-6">
                     <img class="world-map" src="images/world_map_.png" alt="illustration world map" />
                 </div>
             </div>
         </section>
-        <section class="weather-location">
-            <div class="row">
-                <div class="col-12">
-                    <h3>
-                        <i class="fas fa-map-marker-alt"> </i><span id="current-city"> <strong>CITY</strong></span>:
-                        <span id="current-time"> </span>
-                        <br />
-                        <span id="current-degree"> TEMP </span> <a id="celcius" href="#">ºC </a>| <a id="fahrenheit"
-                            href="#">ºF</a>
-                    </h3>
                     <hr />
-        </section>
-
         <section class="daily-weather">
             <div class="container-fluid">
                 <div class="row row-cols-5">
