--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     </form>
                     <section class="weather-location">
                     <h3>
-                        <i class="fas fa-map-marker-alt"> </i><span id="current-city"> <strong>CITY</strong></span>:
+                        <i class="fas fa-map-marker-alt"> </i><span id="current-city"> <strong>CITY</strong></span>
+                        <br/>
                         <span id="current-time"> </span>
                         <br />
                         <span id="current-degree"> TEMP </span> <a id="celcius" href="#">ºC </a>| <a id="fahrenheit" href="#">ºF</a>
